# btk

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  HANDOFF.md  README.md  SUBMODULE_INVENTORY.md  go.mod  start.bat
.pi/memory-blocks/: agent.md
.pi/tasks/: tasks-8dfca161-aada-41a9-90fa-aab3ed96faa6.json
build-vs2019-script-probe5/: run_csscript_with_refs_background_wmi.ps1
cmake/: BTKConfig.cmake  BTKConfigVersion.cmake  BTKDeploy.cmake  BTKMacros.cmake  CopperSpiceConfig.cmake  CopperSpiceConfigVersion.cmake  CopperSpiceDeploy.cmake  CopperSpiceMacros.cmake  InstallMinGW.cmake  archlinux-mingw.cmake  cs-config.h.cmake  pkgconfig.cmake
cmake/modules/: CheckAtomics.cmake  FindFontconfig.cmake  FindFreetype.cmake  FindGLib2.cmake  FindGObject2.cmake  FindGStreamer.cmake  FindIconv.cmake  FindMySQL.cmake  FindPulseAudio.cmake  FindWayland.cmake  FindX11_XCB.cmake  FindXCB.cmake  FindXKBCommon.cmake  FindXKBCommon_X11.cmake  ResourceMacros.cmake  Test64BitFiles.cmake  TestLargeFiles.cmake
docs/ai/testing/btk-package-focus-reason-smoke-example/: CMakeLists.txt  main.cpp
docs/ai/testing/btk-package-gui-smoke-example/: CMakeLists.txt  main.cpp
docs/ai/testing/btk-package-integrated-runtime-smoke-example/: CMakeLists.txt  main.cpp
docs/ai/testing/btk-package-multimedia-smoke-example/: CMakeLists.txt  main.cpp
docs/ai/testing/btk-package-platform-smoke-example/: CMakeLists.txt  main.cpp
docs/ai/testing/btk-package-popup-modal-smoke-example/: CMakeLists.txt  main.cpp
go/core/: types.go
logs/handoffs/: 2026-04-04-gpt-bootstrap.md
scripts/: check_btk_naming.py  generate_bml_qtscript_dependency_audit.py  generate_bml_script_manifest.py  generate_btk_api_inventory.py  generate_csscript_jscore_drift_audit.py  stage_probe_core_artifacts.ps1
src/core/: CMakeLists.txt
src/dbus/: qdbus_symbols.cpp  qdbus_symbols_p.h  qdbusabstractadaptor.cpp  qdbusabstractadaptor.h  qdbusabstractadaptor_p.h  qdbusabstractinterface.cpp  qdbusabstractinterface.h  qdbusabstractinterface_p.h  qdbusargument.cpp  qdbusargument.h  qdbusargument_p.h  qdbusconnection.cpp  qdbusconnection.h  qdbusconnection_p.h  qdbusconnectioninterface.cpp  qdbusconnectioninterface.h  qdbusconnectionmanager_p.h  qdbuscontext.cpp  qdbuscontext.h  qdbuscontext_p.h  qdbusdemarshaller.cpp  qdbuserror.cpp  qdbuserror.h  qdbusextratypes.cpp  qdbusextratypes.h  qdbusintegrator.cpp  qdbusintegrator_p.h  qdbusinterface.cpp  qdbusinterface.h  qdbusinterface_p.h  qdbusinternalfilters.cpp  qdbusintrospection.cpp  qdbusintrospection_p.h  qdbusmacros.h  qdbusmarshaller.cpp  qdbusmessage.cpp  qdbusmessage.h  qdbusmessage_p.h  qdbusmetaobject.cpp  qdbusmetaobject_p.h  (+25 more)
src/declarative/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/multimedia/: CMakeLists.txt
src/network/: CMakeLists.txt
src/opengl/: CMakeLists.txt  qgl.cpp  qgl.h  qgl_p.h  qglbuffer.cpp  qglbuffer.h  qglcolormap.cpp  qglcolormap.h  qglformat.h  qglframebufferobject.cpp  qglframebufferobject.h  qglframebufferobject_p.h  qglfunctions.cpp  qglfunctions.h  qglpaintdevice.cpp  qglpaintdevice_p.h  qglpixelbuffer.cpp  qglpixelbuffer.h  qglpixelbuffer_p.h  qglshader.h  qglshaderprogram.cpp  qglshaderprogram.h  qgraphicsshadereffect.cpp  qgraphicsshadereffect_p.h  qtopengl.h
src/script/: CMakeLists.txt
src/script/api/: qscriptable.cpp  qscriptable.h  qscriptable_p.h  qscriptclass.cpp  qscriptclass.h  qscriptclasspropertyiterator.cpp  qscriptclasspropertyiterator.h  qscriptcontext.cpp  qscriptcontext.h  qscriptcontext_p.h  qscriptcontextinfo.cpp  qscriptcontextinfo.h  qscriptengine.cpp  qscriptengine.h  qscriptengine_p.h  qscriptengineagent.cpp  qscriptengineagent.h  qscriptengineagent_p.h  qscriptextensioninterface.h  qscriptextensionplugin.cpp  qscriptextensionplugin.h  qscriptprogram.cpp  qscriptprogram.h  qscriptprogram_p.h  qscriptstring.cpp  qscriptstring.h  qscriptstring_p.h  qscriptvalue.cpp  qscriptvalue.h  qscriptvalue_p.h  qscriptvalueiterator.cpp  qscriptvalueiterator.h
src/script/bridge/: qscriptactivationobject.cpp  qscriptactivationobject_p.h  qscriptclassobject.cpp  qscriptclassobject_p.h  qscriptdeclarativeclass.cpp  qscriptdeclarativeclass_p.h  qscriptdeclarativeobject.cpp  qscriptdeclarativeobject_p.h  qscriptfunction.cpp  qscriptfunction_p.h  qscriptglobalobject.cpp  qscriptglobalobject_p.h  qscriptobject.cpp  qscriptobject_p.h  qscriptqobject.cpp  qscriptqobject_p.h  qscriptstaticscopeobject.cpp  qscriptstaticscopeobject_p.h  qscriptvariant.cpp  qscriptvariant_p.h
src/script/parser/: qscriptast.cpp  qscriptast_p.h  qscriptastfwd_p.h  qscriptastvisitor.cpp  qscriptastvisitor_p.h  qscriptgrammar.cpp  qscriptgrammar_p.h  qscriptlexer.cpp  qscriptlexer_p.h  qscriptparser.cpp  qscriptparser_p.h  qscriptsyntaxchecker.cpp  qscriptsyntaxchecker_p.h
src/sql/: CMakeLists.txt
src/svg/: CMakeLists.txt  qgraphicssvgitem.cpp  qgraphicssvgitem.h  qsvgfont.cpp  qsvgfont_p.h  qsvggenerator.cpp  qsvggenerator.h  qsvggraphics.cpp  qsvggraphics_p.h  qsvghandler.cpp  qsvghandler_p.h  qsvgnode.cpp  qsvgnode_p.h  qsvgrenderer.cpp  qsvgrenderer.h  qsvgstructure.cpp  qsvgstructure_p.h  qsvgstyle.cpp  qsvgstyle_p.h  qsvgtinydocument.cpp  qsvgtinydocument_p.h  qsvgwidget.cpp  qsvgwidget.h
src/vulkan/: CMakeLists.txt  qvulkan_device_functions.cpp  qvulkan_device_functions.h  qvulkan_functions.cpp  qvulkan_functions.h  qvulkan_instance.cpp  qvulkan_instance.h  qvulkan_window.cpp  qvulkan_window.h  qvulkan_window_renderer.cpp  qvulkan_window_renderer.h  qvulkandevicefunctions.h  qvulkanfunctions.h  qvulkaninstance.h  qvulkanwindow.h  qvulkanwindowrenderer.h
src/xml/: CMakeLists.txt
src/xmlpatterns/: CMakeLists.txt
test/: cs_catch2.h  cs_catch_defines.h
test/core/: CMakeLists.txt  test_main.cpp
test/gui/: CMakeLists.txt  test_main.cpp
translations/: cs_ar.ts  cs_ca.ts  cs_cs.ts  cs_da.ts  cs_de.ts  cs_es.ts  cs_fa.ts  cs_fi.ts  cs_fr.ts  cs_gd.ts  cs_gl.ts  cs_he.ts  cs_hu.ts  cs_it.ts  cs_ja.ts  cs_ko.ts  cs_lt.ts  cs_lv.ts  cs_pl.ts  cs_pt.ts  cs_ru.ts  cs_sk.ts  cs_sl.ts  cs_sv.ts  cs_uk.ts  cs_zh_CN.ts  cs_zh_TW.ts
(+3899 files in other folders)
